<resources>
    <string name="app_name">RoutineTracker</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="hello_blank_fragment">HELLO</string>
    <string name="delete_button">Delete routine</string>
    <string name="edit_button">Edit routine</string>
    <string-array name="routine_types">
        <item>Study</item>
        <item>Exercise</item>
        <item>Socialise</item>
    </string-array>
    <string name="settings">Settings</string>

    <string name="home">Routine list</string>
    <string name="settings_title">Settings</string>

    <string name="notifications_enable">Enable routine notifications</string>

    <string name="notifications_time_title">Set notifications advance time</string>
    <string name="notifications_time_summary">Input time in minutes</string>

    <string name="reset_app_title">Reset the application</string>
    <string name="reset_app_summary">Deletes all routines and resets the settings</string>

    <string name="reset_title">Reset app</string>
</resources>